# synthtoy

./: .gitignore  Cargo.toml  flake.nix
include/: sin_table.txt  triangle_table.txt
src/: audio_thread.rs  filters.rs  main.rs  midi.rs  note.rs  wavetable.rs
