[package]
name = "synthtoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
lazy_static = "1.4.0"
midir = "0.8.0"
plotters = "0.3.1"
rustfft = "6.0.1"
sdl2 = "0.35.1"
wav = "1.0.0"
